--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -83,3 +83,62 @@ more on the "who" and what they did rather than the victims; some very
 interesting perspectives there, but again too much information to take in in
 only one visit.
 
+
+went to kottbusser tor, the suburb recommended by Carley earlier in the day, and
+found that although an interesting suburb with a lot of cool street art, there
+seemed to be nothing but turkish restaruants around. If you've read my post
+about turkey, you'll know I love turkish food, but being freshly in Germany we
+were really wanting some german food and it honestly felt a bit disappointing
+that a single culture had so completely overrun this part of the city. Im pretty
+sure there's a saturation point for kebab shops on any one street, and I'm
+pretty sure the streets of Kottsbusser tor crossed that point long ago. We ended
+up caving in and getting Turkish food since there seemed like no other option,
+and it was quite frankly disappointing. overpriced and dry, leaving me even more
+confused how such a restaurant can survive in the face of so much competition?
+
+After dinner we went to a tapas bar for a while to soak in the bohemian/hipster
+vibe before heading over the bridge near Warschauer strasse into a district of
+old warehouse converted into bars and stuff, and loads and loads of awesome
+grafiti.
+
+found a little bar in what seemed to be a multipurpose building. at various
+times I saw different doors open and I'm sure I saw 2-3 different bars, a music
+recording studio looking room and a juggling studio up stairs. very eclectic
+mix.
+
+live music, had a guy playing a pan flute and a eukelae, then more musicans
+arrived with other strange instruments. a mouth harp and somthing that looked
+kind of like a sitar/accordian with a little wind-y thing at one end. bag pipe
+with inoffensive tuning? then some folk dancing.
+
+karl marx allie. lots of old massive east german constructed buildings.
+communist "ads" on top of a few buildings, sputnik on top of a cafe. highlight
+was a pretty epic videogames museum. every old console imaginable and loads of
+classic games. special exibit with the many different iterations of donkey kong.
+arcade machines.
+
+
+drank a lot of great beers, ate some amazing wiener schnitzel
+
+did a lot of exploration around berlin taking in the street art. probably at
+least 4-5 days worth in total if all added up. some "self guided" walking tours,
+one "real berlin" free walking tour that seemded heavily street art focused and
+I swear our guide must have been well tied in with the street art communitiy
+based on how much he seemed to know about individual artists, techniques etc,
+and a lot of solo exploration.
+
+on one of my explorations I stumbled upon random buskers who were so damn good I
+stopped and listned to them for probably an hour. these guys called the trouble
+notes. one guy on electric violin, one guy finger picking the heck out of a
+guitar while also using it as a precussion instrument, and another dude sitting
+on a strange square box drum. very beautiful sound. bought a cd to support them,
+even though I have nothing to play it in, and got a flyer for a show later in
+the month in a very hidden away warehouse.
+
+
+Moved in with the nicoles on the day of a crafternoon that was still in
+progress. hung out trying to make an origami animal (damned if I can remember
+what the animal was) but we struggled with it for a very long time before
+reading in the front of the book the instructions (I thought only men didn't
+read instructions, but now I know better :P) and then Nicole A was able to
+successfuly make the animal! 
