wrote half of this twice because my computer froze and I hadnt saved :/

--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -1,4 +1,5 @@
----
+
+--
 layout: post
 title: "berlin"
 date: 2014-03-03 14:31
@@ -7,7 +8,8 @@ description:
 published: false
 dont_cache_images: true
 priority: 0.5
----
+
+--
 
 First flight with ryanair on this trip. pretty much trouble free. seems absurd
 they still mess about with unassigned seating, makes the boarding process so
@@ -78,7 +80,7 @@ australia's slaughtering in galiploi for the hundreth time, by some ex-army
 history teacher.
 
 The topograph of terror museum itself was another really good museum about the
-various groups involed in executing the attrocities of WWII.  It focused a lot
+various groups involed in executing the attrocities of WWII. It focused a lot
 more on the "who" and what they did rather than the victims; some very
 interesting perspectives there, but again too much information to take in in
 only one visit.
@@ -142,3 +144,148 @@ what the animal was) but we struggled with it for a very long time before
 reading in the front of the book the instructions (I thought only men didn't
 read instructions, but now I know better :P) and then Nicole A was able to
 successfuly make the animal! 
+
+
+
+exploring grafiti around warschauer
+
+real berlin walking tour, strong focus on grafiti and street art. goot to have
+specific artists pointedout and then start recognising their work around the
+city. learned some more about the berlin wall. interesting tidbit about west
+belin being the only part of west germany that didn't have conscription, so all
+the liberals migrated there, which may explain the very liberal culture that
+exists there today. learned how developers are now developing along the lovely
+green strip behind the long strip of wall that makes up the east side gallery,
+what a fuck up.
+
+deutch technology museum. heavy focus on planes and trains, but also some
+interesting stuff about medicine, old bikes, photography, old mechanical
+computers and television. 
+
+rant about audioguides. only covered 25 things in the whole musuem, but then
+waffeled on for like 10 minutes about each one. 
+
+went and saw the trouble notes do a live show with the two nicoles and a friend
+of theirs. venue an old building hidden down a dark alley, surrounded by
+building that felt like they were laregly abandoned. very good show, even if the
+support was super emo and the venue was super smokey. feels like I got in a time
+machine to be back in a place where you can smoke in public venues.
+
+pergamont museum, huge babalonian gate, ancient temple from turkey. lack of any
+information in english and I didn't get an audio guide because of my last
+expeience with one.
+
+pergamont gate on display is actually the smaller, rear-side of the gate. the
+front must have been epic.
+
+the new musuem was great, I thought the building itself was super interesting,
+each room styled differently and uniquely. lots of it reconstructee after the
+war. felt too old to be calling the new museum.
+
+oddly, the inside of the old museum I found very dull and streile.
+
+richstark (the german parliment), track work meant that I was pretty late to my
+appointment. I'd left home cutting things fine, but didn't know that there was
+trackwork and no trains running on a line I needed to use meant I ended up going
+to another station near by and had to run to get there, all the while being
+mobbed by deaf street collectors (who I suspect are just gypsys who have worked
+out a way to not need to speak any particular language to make you feel like you
+need to give them money, but I'm cynical).
+
+great view of the city, automatic audioguide as you walk up the dome.
+checkpoint charlie museum. way better than I expected. lots of intresting
+stories about escapes hidden in cars, welding machines, a pair of suitcases side
+by side, balloons, gliders. the musuem was actually huge, but i think the layout
+means most people miss half of it, I had the place to myself in that section.
+
+sachenhausen concentration camp, out at oranienburg. 2 km walk from the station
+in the literally freezing cold mist.
+
+got the audio guide, found it to be another miss. very, very long winded, often
+going way off topic. also sort of out of date, as far as a historic sitecan be
+at least. mentions "hope to finish building by 2007", leaving me wondering if
+they finished or not. quite the cliff hanger
+
+camp used by the russian 45-50, lots of info but not very much good info to give
+the whole picture durion that time. lots of personal account but none of them
+tie together and I didn't get much of an idea what it was like.
+
+founations of the gas chambers and the neck shot room were stil there but the
+building were long gone.
+
+infirmary had mention of there being a brothel on site, females prisoners forced
+to work there, soldiers and selected prisoners used it as a reward
+
+frozen puddles everywhere
+
+misty rain as the sun set was freezing cold, but appropriate for the venue.
+really sunk in how hard it would have been being a prisoner given only summer
+clothes and made to stand out in the yard for 24 hours, not moving, on arrival
+
+gluhwine seller on the exit was a live saver!
+
+moved out of the nicoles place as they had a friend coming to stay, sad to be
+leaving, there awesome people. so friendly and welcoming. little nicole is
+bursting with an odd sort of positivity, so even at the end of a shitty day she
+was still enthusiastic, but not in the "look on the bright side" way, more in
+the "fuck that fuckface, and have a great day" way
+
+moved to a hostel which was almost completely full of australians, aside from
+the one staff member there.
+
+erotic museum, sort of dull, oldest sex shop in the world, one floor about the
+owner, 1 floor of drawings and what looked like kitch holiday souvineers
+
+burgermeister, deliciously good.
+
+back to the nicoles place the next night for thanksgivukah. lovely to see them
+again and meet some of their friends. even met a girl also from australia, also
+born in wagga wagga, also moved away at a young age. what are the odds?
+
+lots of delicious vegitarian food and super sweet deserts, pumpkin cheesecake?
+
+met up with harmen again
+
+ddr musuem. great museum, although it needs a bigger space. incredibly packed
+for a museum, and then lots of stuff hidden behinds doors which were awkward to
+open without blocking someone elses view. one really neat aspect was the east
+german apparetment recreation, complete with bugs you could listen to from
+another room.
+
+went to brew baker, pumkin ale, ipa, super sweet dark beer, inside a really nice
+looking little indoor market.
+
+couch surfing with amber. nice girl, spacy. mikeller pop up bar
+
+go otu for breakfast at a place called melbourne canteen, then head to spreepark
+(other blog post
+
+go out for japanese and then go to open mic night
+
+went to charlottenburg schloss, but it was monday so the building was closed.
+explored the gardens, beautiful light frosting on the parts in the shade
+
+amazing pork knuckle, random 20% discount, tipped it right back again
+
+fleece for edinburgh
+
+back to the generator hostel where it started exploring xmas market at alexander
+platz. light a huge rural show, lights and rides. lots of delicious food and
+gluhwein. regular stuff, with a shot of spirits or schapes, eierpunsch (yellow
+and creamy like egg nog, super sweet, with whipped cream on the top). even
+gluhbeir which was rich and sweet. ate some tasty shredded pork, and a bag of
+donut hole things. felt sick from all the sweet stuff.
+
+berlin wall memorial. bits of the multiple layers of wall, an old street cut off
+by the wall. rebuilt secition with both complete walls, guard tower and lights.
+viewing platform in the west letting you see into the east?
+
+buildings along the border with doors on both sides. eventually bricked up the
+west, evicted the people, demolished. old metro station were the trains went
+under east berlin center that got bricked up and abandoned, but now in use
+
+move christmas markets, pranzlaurberg, charlotenburg. much less fun-parky, and a
+better range of food and stuff. lots of sweedish and finland stalls, clothes and
+nicknacks. epic roast dinner, then a huge hungarian donut thing
+
+off to the airport to fuly to barcelona
