--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -11,50 +11,58 @@ priority: 0.5
 
 --
 
-First flight with ryanair on this trip. pretty much trouble free. seems absurd
-they still mess about with unassigned seating, makes the boarding process so
-much slower and inefficient, and it means they play silly games not announcing
-the gate until 15 minutes before it closes so you have the fun of running from
-one airport to the other to catch your flight. I heard they're finally phasing
-it out. cant happen soon enough
+Flying to Berlin was my first flight with Ryanair on this trip, and it was
+pretty much trouble free. It did seem absurd that they still mess about with
+unassigned seating, which makes the boarding process so much slower and
+inefficient than on normal airlines, and it means they play silly games not
+announcing which gate you need to be at until 15 minutes before it closes so you
+have the fun of running from one end of the airport to the other to catch your
+flight. I heard they're finally phasing it out; that cant happen soon enough
+IMO.
 
 <!-- more -->
 
-Once I'd checked into my hostel I got in contact with my friend Erin who I met
-in South Africa, who lives in Berlin on a semi-regular basis. We arranged to
-meet up for dinner and a little introductory tour of the city. The timing was
-actually cut pretty fine as Erin was headed over to the states only a few days
-after I arrived.
+Once I'd gotten into Berlin and checked into my hostel I got in contact with my
+friend Erin, an American who I met in South Africa who lives in Berlin on a
+semi-regular basis. We arranged to meet up for dinner and she offered to give me
+an introductory tour of the city. It was pretty lucky timing as Erin was leaving
+Berlin for a month just a few days after I arrived.
 
-We visited a small christmas market and had some gluh wien, walked around past
-the museum island, postdama place, the hadrians gate, the jewish memorial, and
-numerous other sites around the city. It was lovely to see Erin again and it
-felt like I nice way to get to know the city being shown around by someone who
-obviously loves the place.
+We  walked all around the city, past the museum island, Potsdamer Platz,
+Brandenburger Tor, The Jewish Memorial, and loads of other sites around the
+city. It was quite the whirlwind introduction to the city, we even visited a
+small Christmas market and had some gluhwein! Delicious spiced wine served hot,
+perfect for the cold nights leading up to Christmas. It was lovely to see Erin
+again and it felt like a nice way to get to know the city being shown around by
+someone who obviously loves the place.
 
-I feel a bit bad about having zero photos with erin or the places we went to go
+I feel a bit bad about having zero photos with Erin or the places we went to go
 with this part of the post, but at times while travelling I've been hit by
 "photo sorting fatigue", which leaves me in a state where I think to myself "if
 I don't take any photos I wont have to sort any more!", which leads to gaps like
 we have here.
 
-We caught up again the next day to go and see templehoff park, an old airfield
-that has been turned into a park, but still has all the runways and stuff there.
-These days there's a community garden there and areas dedicated for having bbqs
-and stuff. I seems like it would be a lovely place to visit in the sumertime,
-and a great venue for a music festival.
+We met up again the next day to go and visit Tempelhof Park, an old airfield
+that has been turned into a public park, but still has all the runways and stuff
+there. It's kind of surreal to be wandering around one what quite obviously was
+a fairly big airfield, with people jogging past or cycling on bikes.  These days
+there's a community garden there and areas dedicated for having BBQs and stuff.
+It seems like it would be a lovely place to spent time at in the summertime, and
+would make a great venue for a music festival.
 
-We went out for pizza with Erin's housemates, Nicole and Nicole, to meet each
-other and see how we got along and the possiblity of me taking Erins room while
-she was away. They were both lovely and it seemed like it would be nice to live
-in a typical german appartment for at least some of my stay in Berlin, and they
-were happy to take me in, so I got to move in a few days after Erin left.
+We went out that night for pizza with Erin's housemates, Nicole and Nicole, as a
+chance to meet each other and see how we got along, and to see about the
+possibility of me taking Erin's room while she was away. The two Nicoles were
+both lovely and it seemed like it would be cool to live in a typical German
+apartment for at least some of my stay in Berlin. They were happy to have me
+take the room, so I got to move in a few days after Erin left.
 
-in my last few days at the hostel, I met a Dutch guy named Harmon who was a bit
-of a history buff and a nice fellow so we decided to explore some stuff
-together. We went to the Holocaust Museum, which was very interesting but there
-was just too much information there to process it all so by 3/4 of the way
-through I was skipping over 90% of the stuff and was pretty museum-fatigued.
+In my last few days staying in the hostel I met a Dutch guy named Harmon who was
+a bit of a history buff and seemed like a nice fellow, so we decided to explore
+some of the city together. We went to the Holocaust Museum, which was very
+interesting but there was just too much information there to process it all, so
+by 3/4 of the way through I was skipping reading 90% of the text and was pretty
+well museum-fatigued.
 
 To combat that we went into a nearby bar and had a few beers and got talking
 with the bartender, a girl from Birmingham named Carley, who gave us some good
