These ö's are too tricky for me

--- a/source/_posts/2014-02-06-turkey.markdown
+++ b/source/_posts/2014-02-06-turkey.markdown
@@ -12,7 +12,7 @@ a fairy chimney hotel. These were rock formation that had been eroded away into
 conical shapes, that had rooms carved into them, with some brickwork to divide
 up the space.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/11922915693/in/set-72157639724831244" title="Me in front of my cave hotel in G&#246;reme by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3751/11922915693_7c1de35fca_c.jpg" width="600" height="800" alt="Me in front of my cave hotel in G&#246;reme"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/11922915693/in/set-72157639724831244" title="Me in front of my cave hotel in Goreme by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3751/11922915693_7c1de35fca_c.jpg" width="600" height="800" alt="Me in front of my cave hotel in Goreme"></a>
 
 <!-- more -->
 
@@ -73,7 +73,7 @@ over. We didn't actually go up in one because we'd only just done a balloon ride
 in Africa a few weeks earlier but it was beautiful to see so many balloons
 floating over the town.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/11926395756/in/set-72157639724831244" title="Lots of ballons over G&#246;reme by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7330/11926395756_8ac928a965_c.jpg" width="800" height="601" alt="Lots of ballons over G&#246;reme"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/11926395756/in/set-72157639724831244" title="Lots of ballons over Goreme by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7330/11926395756_8ac928a965_c.jpg" width="800" height="601" alt="Lots of ballons over Goreme"></a>
 
 From Göreme we got the night bus to Antalya down on the Mediterranean coast, and
 learnt our lesson in "a night on a bus does not really get you an extra day
