--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -55,7 +55,7 @@ both lovely and it seemed like it would be cool to live in a typical German
 apartment for at least some of my stay in Berlin. They were happy to have me
 take the room, so I got to move in a few days after Erin left.
 
-In my last few days staying in the hostel I met a Dutch guy named Harmon who was
+In my last few days staying in the hostel I met a Dutch guy named Harmen who was
 a bit of a history buff and seemed like a nice fellow, so we decided to explore
 some of the city together. We went to the Holocaust Museum, which was very
 interesting but there was just too much information there to process it all, so
@@ -73,69 +73,85 @@ Third Reich.  Its also coincidentally right next to a long segment of the Berlin
 wall that was still in place, complete with some large holes smashed in the
 concrete.
 
-It was great having Harmon there to fill in the massive gaps in my knowledge
-about German history. I know we covered the world wars in high school, but I
+It was great having Harmen there to fill in the massive gaps in my knowledge
+about German history. I know we covered the World Wars in high school, but I
 don't think we ever even touched on the cold war (I guess because Australia
-played no part in it, and our history classes seemed to have been biased towards
-things that Australia took part in, rather than important events that shaped the
-world as it is today.
+played no part in it, and our history classes seemed to have been very biased
+towards things that Australia took part in, rather than important events that
+shaped the world as it is today.
 
 I never enjoyed history at school, but I now think that was largely because of
 the stupidly narrow focus that my small rural high school had in its classes.
-The stuff I've learned about while travelling about hte history in a ton of
-other countries has been facinating. far more interesting than hearing about
-australia's slaughtering in galiploi for the hundreth time, by some ex-army
-history teacher.
+The stuff I've learned about while travelling about the history in a bunch of
+other countries has been fascinating. Far more interesting than hearing about
+Australia being slaughtered at Gallipoli for the hundredth time.
 
-The topograph of terror museum itself was another really good museum about the
-various groups involed in executing the attrocities of WWII. It focused a lot
-more on the "who" and what they did rather than the victims; some very
-interesting perspectives there, but again too much information to take in in
-only one visit.
+The Topography of Terror museum was another really good museum, covering the
+various groups involved in carrying out the atrocities of WWII. It focused a lot
+more on the "who" and what they did; some very interesting perspectives there,
+but again too much information to take it all in in only one visit.
 
 
-went to kottbusser tor, the suburb recommended by Carley earlier in the day, and
-found that although an interesting suburb with a lot of cool street art, there
-seemed to be nothing but turkish restaruants around. If you've read my post
-about turkey, you'll know I love turkish food, but being freshly in Germany we
-were really wanting some german food and it honestly felt a bit disappointing
-that a single culture had so completely overrun this part of the city. Im pretty
-sure there's a saturation point for kebab shops on any one street, and I'm
-pretty sure the streets of Kottsbusser tor crossed that point long ago. We ended
-up caving in and getting Turkish food since there seemed like no other option,
-and it was quite frankly disappointing. overpriced and dry, leaving me even more
-confused how such a restaurant can survive in the face of so much competition?
+Harmen and I then went to Kottbusser Tor, the suburb recommended to us by Carley
+earlier in the day, and found that although it seemed like an interesting suburb
+with a lot of cool street art, there seemed to be nothing but Turkish
+Restaurants around. If you've read my post about Turkey, you'll know I adore
+Turkish food, but being newly in Germany we were really wanting to eat some
+German food and it honestly felt a bit disheartening that a single culture had
+so completely squeezed out all others in the food scene in this part of the
+city. I'm would think there's a saturation point for number of kebab shops you
+really need on any one street, and I'm pretty sure the streets of Kottbusser tor
+crossed that point long ago.
+
+We ended up caving in and getting Turkish food since there seemed like there was
+no other option, and it was quite frankly disappointing. Overpriced and dry,
+leaving me even more confused how such an average restaurant can survive in the
+face of so much competition?
 
 After dinner we went to a tapas bar for a while to soak in the bohemian/hipster
-vibe before heading over the bridge near Warschauer strasse into a district of
-old warehouse converted into bars and stuff, and loads and loads of awesome
-grafiti.
+vibe they had going on there, before heading over the bridge near Warschauer
+Strasse station into a district of old warehouses that had been converted into
+bars, skate parks, climbing centres and all kinds stuff, all decorated outside
+with loads and loads of awesome graffiti.
 
-found a little bar in what seemed to be a multipurpose building. at various
-times I saw different doors open and I'm sure I saw 2-3 different bars, a music
-recording studio looking room and a juggling studio up stairs. very eclectic
+We found a nice little bar in what seemed to be a bit of a multi-purpose
+building. At various times I saw through different doors and I'm sure I saw 2-3
+different bars, a room that looked to be some sort of music recording studio,
+and what I think might have been a juggling studio up stairs. Quite an eclectic
 mix.
 
-live music, had a guy playing a pan flute and a eukelae, then more musicans
-arrived with other strange instruments. a mouth harp and somthing that looked
-kind of like a sitar/accordian with a little wind-y thing at one end. bag pipe
-with inoffensive tuning? then some folk dancing.
+They had some live music happening in the bar, initially a single guy
+alternating between playing a pan flute and a ukulele, then more musicians
+arrived with other strange instruments. One woman had a mouth harp, another guy
+had something that looked like the love-child of a sitar and an accordion with a
+little crank at one end, and the original guy switched over to playing something
+that appeared to be a bag pipe, but with inoffensive tuning. For serious, a bag
+pipe without the piercing pitch. They two of them started doing some folk
+dancing. It was quite the cool little show. Brunswick hipsters, eat your heart
+out.
 
-karl marx allie. lots of old massive east german constructed buildings.
-communist "ads" on top of a few buildings, sputnik on top of a cafe. highlight
-was a pretty epic videogames museum. every old console imaginable and loads of
-classic games. special exibit with the many different iterations of donkey kong.
-arcade machines.
+Another day I went an walked along Karl-Marx Allee, a huge boulevard built by
+the GDR/DDR, I guess to show off how great communism is. It is lined with lots
+of massive buildings built during the early years of the Cold War.
 
+There are some interesting communist "ads" on top of a few buildings,
+interesting because being communist meant there wasn't really a need for any
+advertising, there was no competition between companies, but there were ads for
+stuff in West Berlin and didn't want to be outdone by them.
 
-drank a lot of great beers, ate some amazing wiener schnitzel
+There was also a small model of Sputnik on top of a cafe.
 
-did a lot of exploration around berlin taking in the street art. probably at
-least 4-5 days worth in total if all added up. some "self guided" walking tours,
-one "real berlin" free walking tour that seemded heavily street art focused and
-I swear our guide must have been well tied in with the street art communitiy
-based on how much he seemed to know about individual artists, techniques etc,
-and a lot of solo exploration.
+But the highlight for me, completely unrelated to it's socialist past, was the
+epic video game museum. It contained pretty much every console imaginable and
+loads of classic games, and some classic arcade machines too. The place brought
+out a huge amount of nostalgia in me, so many great memories.
+
+I did a huge amount of exploration around Berlin appreciating the street art,
+probably at least 4-5 days whole days worth in total if you added it all up. I
+did a few "self guided" walking tours (as in I had an itinerary or stuff to look
+for found somewhere online), A ton of randomly wandering after spotting a cool
+piece by chance, and a "Real Berlin" free walking tour that seemed to be quite
+heavily street art focused.
 
 on one of my explorations I stumbled upon random buskers who were so damn good I
 stopped and listned to them for probably an hour. these guys called the trouble
@@ -164,7 +180,12 @@ belin being the only part of west germany that didn't have conscription, so all
 the liberals migrated there, which may explain the very liberal culture that
 exists there today. learned how developers are now developing along the lovely
 green strip behind the long strip of wall that makes up the east side gallery,
-what a fuck up.
+what a fuck up. 
+I think our guide must have been well connected in with
+the street art community based on how much he seemed to know about individual
+artists, techniques, etc. I almost suspect I might be one of the artists,
+although he denied it when I asked.
+
 
 deutch technology museum. heavy focus on planes and trains, but also some
 interesting stuff about medicine, old bikes, photography, old mechanical
@@ -252,7 +273,7 @@ born in wagga wagga, also moved away at a young age. what are the odds?
 
 lots of delicious vegitarian food and super sweet deserts, pumpkin cheesecake?
 
-met up with harmen again
+met up with Harmen again
 
 ddr musuem. great museum, although it needs a bigger space. incredibly packed
 for a museum, and then lots of stuff hidden behinds doors which were awkward to
