--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -4,8 +4,6 @@ title: "Berlin"
 date: 2014-03-03 14:31
 tags: Berlin, Germany
 description:
-published: false
-dont_cache_images: true
 priority: 0.5
 ---
 
@@ -62,6 +60,8 @@ interesting but there was just too much information there to process it all, so
 by 3/4 of the way through I was skipping reading 90% of the text and was pretty
 well museum-fatigued.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13525055773/in/set-72157643245435323" title="Memorial to the Murdered Jews of Europe by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7312/13525055773_8cd2455173_c.jpg" width="800" height="601" alt="Memorial to the Murdered Jews of Europe"></a>
+
 To combat that we went into a nearby bar for a rest and a few beers. We got talking
 with the bartender, a girl from Birmingham named Carley, who gave us some good
 tips for some neighbourhoods to go exploring later in the evening.
@@ -73,6 +73,8 @@ Third Reich.  Its also coincidentally right next to a long segment of the Berlin
 wall that was still in place, complete with some large holes smashed in the
 concrete.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13525750244/in/set-72157643245435323" title="Hole smashed in a preserved part of the Berlin Wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3785/13525750244_66e9ee1851_c.jpg" width="601" height="800" alt="Hole smashed in a preserved part of the Berlin Wall"></a>
+
 It was great having Harmen there to fill in the massive gaps in my knowledge
 about German history. I know we covered the World Wars in high school, but I
 don't think we ever even touched on the cold war (I guess because Australia
@@ -81,7 +83,7 @@ towards things that Australia took part in, rather than important events that
 shaped the world as it is today.
 
 I never enjoyed history at school, but I now think that was largely because of
-the stupidly narrow focus that my small rural high school had in its classes.
+the incredibly narrow focus that my small rural high school had in its classes.
 The stuff I've learned about while travelling about the history in a bunch of
 other countries has been fascinating. Far more interesting than hearing about
 Australia being slaughtered at Gallipoli for the hundredth time.
@@ -90,7 +92,6 @@ The Topography of Terror museum was another really good museum, covering the
 various groups involved in carrying out the atrocities of WWII. It focused a lot
 more on the "who" and what they did; some very interesting perspectives there,
 but again too much information to take it all in in only one visit.
-
 
 Harmen and I then went to Kottbusser Tor, the suburb recommended to us by Carley
 earlier in the day, and found that although it seemed like an interesting suburb
@@ -120,6 +121,8 @@ different bars, a room that looked to be some sort of music recording studio,
 and what I think might have been a juggling studio up stairs. Quite an eclectic
 mix.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13525867974/in/set-72157643245435323" title="Hipster folk music by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7017/13525867974_09174cf869_c.jpg" width="800" height="600" alt="Hipster folk music"></a>
+
 They had some live music happening in the bar, initially a single guy
 alternating between playing a pan flute and a ukulele, then more musicians
 arrived with other strange instruments. One woman had a mouth harp, another guy
@@ -130,21 +133,52 @@ pipe without the piercing pitch. They two of them started doing some folk
 dancing. It was quite the cool little show. Brunswick hipsters, eat your heart
 out.
 
+
 Another day I went an walked along Karl-Marx Allee, a huge boulevard built by
 the GDR/DDR, I guess to show off how great communism is. It is lined with lots
 of massive buildings built during the early years of the Cold War.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13526156075/in/set-72157643245435323" title="Big East Berlin buildings on Karl-Marx Allee by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3755/13526156075_e9e5c61fe9_c.jpg" width="800" height="450" alt="Big East Berlin buildings on Karl-Marx Allee"></a>
 
 There are some interesting communist "ads" on top of a few buildings,
 interesting because being communist meant there wasn't really a need for any
 advertising, there was no competition between companies, but there were ads for
 stuff in West Berlin and didn't want to be outdone by them.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13525982215/in/set-72157643245435323" title="Communist era advertising by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7334/13525982215_8b0917a31b_c.jpg" width="800" height="601" alt="Communist era advertising"></a>
+
 There was also a small model of Sputnik on top of a cafe.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13526227694/in/set-72157643245435323" title="Cafe with Sputnik on top of it by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3701/13526227694_48e9c1fe96_c.jpg" width="800" height="601" alt="Cafe with Sputnik on top of it"></a>
 
 But the highlight for me, completely unrelated to it's socialist past, was the
 epic video game museum. It contained pretty much every console imaginable and
 loads of classic games, and some classic arcade machines too. The place brought
 out a huge amount of nostalgia in me, so many great memories.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13538254253/in/set-72157643245435323" title="So much video game history by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3771/13538254253_f0fd2c472a_c.jpg" width="800" height="601" alt="So much video game history"></a>
+
+Some pieces of special note included the original Sega Master System, my first
+every console,
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13527934633/in/set-72157643245435323" title="Sega Master System by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2859/13527934633_574d3fd060_c.jpg" width="800" height="450" alt="Sega Master System. NFI why it says Mark III, this was the one before the SMSII in Australia"></a>
+
+A virtual reality machine I have memories of paying way to much to have a turn
+of at a video game arcade somewhere in Queensland when I was a kid,
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13528085255/in/set-72157643245435323" title="The first VR machine I ever saw and used back when I was a kid by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13528085255_3da8f04e72_c.jpg" width="645" height="800" alt="The first VR machine I ever saw and used back when I was a kid"></a>
+
+An Apple II, signed by the brains behind it, Steve Wozniak,
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13528026095/in/set-72157643245435323" title="Apple II, signed by Woz by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7090/13528026095_1e823e32aa_c.jpg" width="800" height="605" alt="Apple II, signed by Woz"></a>
+
+And this very unique arcade machine called the PainStation, which was a multi
+player game that burnt, electrocuted and whipped the players while they played a
+game, whoever flinched away first lost.
+[Seriously](http://www.flickr.com/photos/lucasthenomad/13536673074/in/set-72157643245435323).
+It wasn't switched on so I can't say how bad the pain really was.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13536495093/in/set-72157643245435323" title="PainStation by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7324/13536495093_06657420b0_c.jpg" width="598" height="800" alt="PainStation"></a>
 
 I did a huge amount of exploration around Berlin appreciating the street art,
 probably at least 4-5 days whole days worth in total if you added it all up. I
@@ -153,25 +187,36 @@ for found somewhere online), A ton of randomly wandering after spotting a cool
 piece by chance, and a "Real Berlin" free walking tour that seemed to be quite
 heavily street art focused.
 
-on one of my explorations I stumbled upon random buskers who were so damn good I
-stopped and listned to them for probably an hour. these guys called the trouble
-notes. one guy on electric violin, one guy finger picking the heck out of a
-guitar while also using it as a precussion instrument, and another dude sitting
-on a strange square box drum. very beautiful sound. bought a cd to support them,
-even though I have nothing to play it in, and got a flyer for a show later in
-the month in a very hidden away warehouse.
+<a href="http://www.flickr.com/photos/lucasthenomad/13567379395/in/set-72157643245435323" title="Rainbow drips by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13567379395_6fc9b174a3_c.jpg" width="800" height="601" alt="Rainbow drips"></a>
 
+On one of my many aimless explorations I stumbled upon some buskers playing in
+the street who were drawing quite a crowd.  A band called The Trouble Notes. One
+guy planing an electric violin, one guy finger picking the heck out of a guitar
+while also using it as a percussion instrument, and another dude sitting on a
+unique drum that was just kind of a square box. They had a very beautiful sound
+and were so damn good I stopped and listened to them for probably an hour.  I
+even bought a CD to support them, even though I have nothing to play it in! And
+I got a flyer for a show later in the month in a very hidden away warehouse.
 
-Moved in with the nicoles on the day of a crafternoon that was still in
-progress. hung out trying to make an origami animal (damned if I can remember
-what the animal was) but we struggled with it for a very long time before
-reading in the front of the book the instructions (I thought only men didn't
-read instructions, but now I know better :P) and then Nicole A was able to
-successfuly make the animal! 
+<a href="http://www.flickr.com/photos/lucasthenomad/13553720455/in/set-72157643245435323" title="The Trouble Notes are awesome! by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2818/13553720455_f90767f22c_c.jpg" width="679" height="800" alt="The Trouble Notes are awesome!"></a>
 
+I moved in with the Nicoles on the day of a "crafternoon" that was still in
+progress when I arrived. I hung out and tried to make an origami animal that had
+been stumping everyone all afternoon (damned if I can remember what the animal
+was now), but we struggled with it for a very long time before finding out there
+were instruction in the front explaining all the different arrows.  With this
+Nicole A was able to successfully make the animal! (I thought only men didn't
+read instructions, but now I know better :P)
 
+exploring grafiti around warschauer, east side gallery.
 
-exploring grafiti around warschauer
+<a href="http://www.flickr.com/photos/lucasthenomad/13562823055/in/set-72157643245435323" title="Fancy car and a colourful wall by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5457/13562823055_133c3262f8_c.jpg" width="800" height="357" alt="Fancy car and a colourful wall"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13563950605/in/set-72157643245435323" title="Trabants by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13563950605_04431b441e_c.jpg" width="800" height="752" alt="Trabants"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13564232873/in/set-72157643245435323" title="Berlin by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3724/13564232873_e9b584efaf_c.jpg" width="800" height="447" alt="Berlin"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13564854475/in/set-72157643245435323" title="Sunday drinks while painting the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3679/13564854475_694238308f_c.jpg" width="800" height="290" alt="Sunday drinks while painting the wall"></a>
 
 real berlin walking tour, strong focus on grafiti and street art. goot to have
 specific artists pointedout and then start recognising their work around the
@@ -186,10 +231,14 @@ the street art community based on how much he seemed to know about individual
 artists, techniques, etc. I almost suspect I might be one of the artists,
 although he denied it when I asked.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant"></a>
+
 
 deutch technology museum. heavy focus on planes and trains, but also some
 interesting stuff about medicine, old bikes, photography, old mechanical
 computers and television. 
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant"></a>
 
 rant about audioguides. only covered 25 things in the whole musuem, but then
 waffeled on for like 10 minutes about each one. 
@@ -204,14 +253,22 @@ pergamont museum, huge babalonian gate, ancient temple from turkey. lack of any
 information in english and I didn't get an audio guide because of my last
 expeience with one.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13570336943/in/set-72157643245435323" title="Ishtar Gate by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7338/13570336943_508a1c623f_c.jpg" width="601" height="800" alt="Ishtar Gate"></a>
+
 pergamont gate on display is actually the smaller, rear-side of the gate. the
 front must have been epic.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13570513833/in/set-72157643245435323" title="Pergamon Altar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7315/13570513833_b093193675_c.jpg" width="800" height="601" alt="Pergamon Altar"></a>
 
 the new musuem was great, I thought the building itself was super interesting,
 each room styled differently and uniquely. lots of it reconstructee after the
 war. felt too old to be calling the new museum.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13570806863/in/set-72157643245435323" title="More plundered loot by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13570806863_91ff2f0594_c.jpg" width="800" height="601" alt="More plundered loot"></a>
+
 oddly, the inside of the old museum I found very dull and streile.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13570964433/in/set-72157643245435323" title="The old museum by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3675/13570964433_e1959ec409_c.jpg" width="800" height="601" alt="The old museum"></a>
 
 richstark (the german parliment), track work meant that I was pretty late to my
 appointment. I'd left home cutting things fine, but didn't know that there was
@@ -221,31 +278,46 @@ mobbed by deaf street collectors (who I suspect are just gypsys who have worked
 out a way to not need to speak any particular language to make you feel like you
 need to give them money, but I'm cynical).
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13571856715/in/set-72157643245435323" title="Reichstag Building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3747/13571856715_cd8f850ee4_c.jpg" width="800" height="601" alt="Reichstag Building"></a>
+
 great view of the city, automatic audioguide as you walk up the dome.
 checkpoint charlie museum. way better than I expected. lots of intresting
 stories about escapes hidden in cars, welding machines, a pair of suitcases side
 by side, balloons, gliders. the musuem was actually huge, but i think the layout
 means most people miss half of it, I had the place to myself in that section.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13574369354/in/set-72157643245435323" title="Entering the American sector by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3707/13574369354_a88abda031_c.jpg" width="800" height="601" alt="Entering the American sector"></a>
+
 sachenhausen concentration camp, out at oranienburg. 2 km walk from the station
 in the literally freezing cold mist.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13574136123/in/set-72157643245435323" title="Sachsenhausen concentration camp by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5154/13574136123_5128f1e198_c.jpg" width="800" height="601" alt="Sachsenhausen concentration camp"></a>
 
 got the audio guide, found it to be another miss. very, very long winded, often
 going way off topic. also sort of out of date, as far as a historic sitecan be
 at least. mentions "hope to finish building by 2007", leaving me wondering if
 they finished or not. quite the cliff hanger
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13574950624/in/set-72157643245435323" title="Guard tower by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13574950624_3b90ef9ba6_c.jpg" width="601" height="800" alt="Guard tower"></a>
+
+
 camp used by the russian 45-50, lots of info but not very much good info to give
 the whole picture durion that time. lots of personal account but none of them
 tie together and I didn't get much of an idea what it was like.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13574588603/in/set-72157643245435323" title="The part used by Russia after WWII by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2865/13574588603_d6129b1b7b_c.jpg" width="800" height="601" alt="The part used by Russia after WWII"></a>
+
 founations of the gas chambers and the neck shot room were stil there but the
 building were long gone.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13574715373/in/set-72157643245435323" title="Ovens foundations by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3818/13574715373_5fa26d9d74_c.jpg" width="800" height="601" alt="Ovens foundations"></a>
 
 infirmary had mention of there being a brothel on site, females prisoners forced
 to work there, soldiers and selected prisoners used it as a reward
 
 frozen puddles everywhere
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13574729685/in/set-72157643245435323" title="Frozen puddle by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3824/13574729685_1de76ae3d8_c.jpg" width="800" height="601" alt="Frozen puddle"></a>
 
 misty rain as the sun set was freezing cold, but appropriate for the venue.
 really sunk in how hard it would have been being a prisoner given only summer
@@ -265,6 +337,8 @@ the one staff member there.
 erotic museum, sort of dull, oldest sex shop in the world, one floor about the
 owner, 1 floor of drawings and what looked like kitch holiday souvineers
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13574866713/in/set-72157643245435323" title="Beate Uhse Erotic Museum by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5278/13574866713_2ab2331733_c.jpg" width="800" height="601" alt="Beate Uhse Erotic Museum"></a>
+
 burgermeister, deliciously good.
 
 back to the nicoles place the next night for thanksgivukah. lovely to see them
@@ -281,13 +355,17 @@ open without blocking someone elses view. one really neat aspect was the east
 german apparetment recreation, complete with bugs you could listen to from
 another room.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13574951913/in/set-72157643245435323" title="Me in a Trabant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7361/13574951913_4fec5217ce_c.jpg" width="800" height="601" alt="Me in a Trabant"></a>
+
 went to brew baker, pumkin ale, ipa, super sweet dark beer, inside a really nice
 looking little indoor market.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13575388144/in/set-72157643245435323" title="Cheers Harmen! by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3745/13575388144_018a2b7751_c.jpg" width="800" height="601" alt="Cheers Harmen!"></a>
 
 couch surfing with amber. nice girl, spacy. mikeller pop up bar
 
 go otu for breakfast at a place called melbourne canteen, then head to spreepark
-(other blog post
+(other blog post [blogged about here](http://www.lucasthenomad.com/2013/12/05/spreepark-berlin)
 
 go out for japanese and then go to open mic night
 
