rough notes from book

--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -9,4 +9,78 @@ dont_cache_images: true
 priority: 0.5
 ---
 Intro
+
+Sniffing and blcoked up with a cold, a hold over from berlin
+
 <!-- more -->
+
+lazy walk around berlin enjoying the warmth
+
+tapas, catalonian sausage and papas bravas, delicious but very garlicy
+
+
+free walking tour of barcelona. learnt about some unique catalonian christmas
+traditions. Caga Tio (or uncle shit), a log that kids beat with sticks each day,
+to aid with digestion, so on christmas day he will poop out candy under his rug.
+also, the pooing man, in nativity scenes.
+
+tour made me realise how little I know about spanish history. they had a
+dictatorship up until 1975
+
+read in the park
+
+met up wit Ibrahim and Nathalie to go to a really nice tapas place they knew.
+amazing sangria, tasty steak bites, croquettes wth spreadable chorizo and melted
+cheese. very yum
+
+went to guell palace, the home of the guell family, renovated and opened to
+tourists since the last time I was in barcelona. gaudi designed, very beautiful.
+lots of nice curves and colour, lovely rainbow twisted chimney
+
+plaza de españa, old bullring that's been coverted into a shopping center. got
+up on the viewing platform for free, nice view of the city. nearby hotel with an
+infinity pool that the roof looks straight onto
+
+monjac castle, memories from last time I was there, very much the same except
+now it's free to enter.
+
+date with Mercé, went to see the "magic fountain". ridiculous crowd and the show
+was delayed, later fireworks went off and we found out it was for some very
+wealthy families wedding. NYE standard, epic.
+
+didn't really hit it off with merce, went to an irish bar for a few drinks
+before parting ways.
+
+went to sagrada la familia, but the queue went right around the block because of
+the public holiday. went to park guell instead, but the public holiday meant it
+was packed with people like a circus and not the peaceful, pretty park I
+remembered. really challenging to get a photo of any of the real typical parts
+of the park without some twat, or group of twats, posing in front of it. it was
+like an endless line of people waiting to rush in. went home frustrated and
+sick of being sick.
+
+went to a couch surfing meeting at a little flamenco concert. met a bunch of
+lovely south americans. flamenco show had interesting guitar and singing and
+some very passionate dancing. I had a "front fow" seat, with mean the woman was
+often looking right at me, 2ft away, making me a bit uncomfortable.
+
+nice chillian girl, Natalia, insists that I get in touch with her where I go to
+chilie or uragay, so she can hook me up with friends to stay with
+
+went to casa batillo, another home designed by gaudi. more lovely curves,
+spirals and gradients of colours. the building looks like a dragon along the
+rooftop from the outside. beautiful furniture, would have been an amazing place
+to live.
+
+went back to sagrada la familia, much shorter lines this day. has been made a
+basiica by the pope in 2010. sadly lots of scaffolding covering my favourite
+facade. ETA is 2030 so I may actually see it finished in my lifetime. realised
+from a model they have of the completed design, that the 5-6 tallest towers
+arent not built yet, so the "jesus" tower is going to be 2x as tall when it's
+done. compltetely epic.
+
+love all the clean completixy of all the shapes involved, all coming back to
+simple math concepts. interesting museum underneath that I don't recall from
+last time.
+
+laundrymat washing near the hotel
