finish barcelona summary

--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -83,4 +83,10 @@ love all the clean completixy of all the shapes involved, all coming back to
 simple math concepts. interesting museum underneath that I don't recall from
 last time.
 
-laundrymat washing near the hotel
+Started to wonder what my photos from last time I visited looked like, and if I
+had enough foresight to take photos of both the completed and under construction
+areas to compare. this time I took lots of photos which while just construction
+now, will be great to look back on in 20 years, seeing this massive structure
+still heavily in progress
+
+December 11th
